# pyrunner

./: .gitignore  README.md
terraform/aws/: deploy.yaml  gitops.yaml  pyproject.toml  pyrunner.py  requirements.txt  tfplan.py
terraform/aws/buildscripts/: tfmodules.py  tfprompts.py  tfregions.py  tfrun.py  tfutils.py
terraform/aws/setup-virtual-environment/: README.md  requirements.txt  tf_py38_env.yml
terraform/aws/variables/: _envs.tf
